Css fix for the razorpay button alignment.

--- a/app/assets/stylesheets/solidus/razorpay.scss
+++ b/app/assets/stylesheets/solidus/razorpay.scss
@@ -9,4 +9,5 @@
   width: 230px;
   padding: 0;
   cursor: pointer;
+  margin-top: 30px;
 }
